# HMSoft

./: .gitignore  README.md  auth.config.ts  components.json  index.html  middleware.ts  module.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
app/: layout.tsx  not-found.tsx
app/(pages)/(landing)/: layout.tsx  not-found.tsx  page.tsx
app/(pages)/dashboard/: layout.tsx  not-found.tsx
app/_lib/: auth.ts
client/: README.md  angular.json  package.json
client/src/: index.html
prisma/: schema.prisma
public/: manifest.json  sw.js.map
server/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  vercel.json
server/src/: app.module.ts  generate-typings.ts  graphql.ts  main.ts
src/: main.css  main.tsx  middleware.ts  route-paths.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: breadcrumbs.tsx  dashboard-nav.tsx  date-range-picker.tsx  file-upload.tsx  github-auth-button.tsx  icons.tsx  overview.tsx  providers.tsx  recent-sales.tsx  titlebar.module.css  titlebar.tsx
src/lib/: auth.ts  db.ts  isLogged.ts  mongo.ts  token.ts
src/models/: user.model.ts
src/routes/: dashboard.tsx  employee.tsx  error-page.tsx  ola.tsx  profile.tsx  user.tsx
src/services/: index.ts  user.service.ts
src/types/: User.ts
src/utils/: db.ts  footerPaths.ts  footerSocialPaths.ts  index.ts  middlewarePaths.ts  navPaths.ts  pricingCardChecks.ts
(+283 files in other folders)
