[package]
name = "hmsoft"
version = "0.1.0"
description = "Hotel Management Software"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
csv = "1.1"
tauri = { version = "1", features = [ "window-unminimize", "window-hide", "window-maximize", "window-unmaximize", "window-show", "window-minimize", "window-close", "window-start-dragging", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
